2003/12/08 13:47 (-0500) rwmcfa1

	* t/paned.t: use strict and use warnings

	* xs/GtkLabel.xs, xs/GtkSizeGroup.xs, xs/GtkStock.xs: apidoc, added 
	enum(s)

2003/12/08 11:14 (-0500) muppetman

	* pm/SimpleList.pm: call signature comments to make maintenance easier.

	* t/paned.t: give effect to statement with no effect

2003/12/08 02:39 (-0500) muppetman

	* xs/GtkWidget.xs: implement gtk_widget_style_get for >= 2.2.0

	* t/paned.t: more robust testing

2003/12/07 22:34 (-0500) rwmcfa1

	* t/trivial-widgets.t: initial import

 	* MANIFEST: added t/trivial-widgets.t, and xs/GtkAccelMap.xs

 	* xs/GtkArrow.xs: doc the GtkArrowtype and GtkShadowType enums in pod
 
	* xs/GtkDnd.xs, xs/GtkTreeStore.xs, xs/GtkTreeView.xs: removed a xxx1 
	param

2003/12/07 21:44 (-0500) muppetman

	* xs/GtkPaned.xs: turn the child[12]_(resize|shrink) accessors into
	mutators, with doc; rearrange the xsubs to make more sense, and adapt
	the docs from the C api reference for the description section.

	A t/paned.t
	* MANIFEST: new test

2003/12/07 16:19 (-0500) rwmcfa1

 	* xs/GtkCalendar.xs, xs/GtkTextIter.xs, xs/GtkTreeModel.xs,
	xs/GtkWidget.xs, xs/PangoTabs.xs: apidoc added/fixed.

2003/12/07 16:19 (-0500) rwmcfa1

	* pm/SimpleList.pm: DELETE fixed, SPLICE implemented for simplelist.

	* t/19.SimpleList.t: test all of the splice stuff

	* examples/simplelist.pl: (muppet) test the new splice stuff

2003/12/06 01:30 (-0500) rwmcfa1

 	* xs/GtkAccelGroup.xs: Gtk2-> functions moved under Gtk2::AccellGroups
	which seems to make more sense.

 	* xs/GtkAccelMap.xs: intial import, 3/4 complete.
 
 	* t/accel-group-map.t: test out the new AccelMap stuff, in conjunction
 	with AccelGroup. 

	* xs_files-2.0: added xs/GtkAccelMap.xs

2003/12/05 13:42 (-0500) muppetman

	D Changes: we haven't maintained this since May, we use ChangeLog.

	D fetch_faq.pl
	D genkeysyms.pl
	D genmaps.pl
	D podifystockitems.pl
	A tools/fetch_faq.pl
	A tools/genkeysyms.pl
	A tools/genmaps.pl
	A tools/podifystockitems.pl